--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -108,105 +108,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>store</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>date</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>customers</th>\n",
-       "      <th>open</th>\n",
-       "      <th>promo</th>\n",
-       "      <th>state_holiday</th>\n",
-       "      <th>school_holiday</th>\n",
+       "      <th>Store</th>\n",
+       "      <th>State</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>5263</td>\n",
-       "      <td>555</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>HE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>6064</td>\n",
-       "      <td>625</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>TH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>8314</td>\n",
-       "      <td>821</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>13995</td>\n",
-       "      <td>1498</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>BE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>4822</td>\n",
-       "      <td>559</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>SN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   store  day_of_week        date  sales  customers  open  promo  \\\n",
-       "0      1            5  2015-07-31   5263        555     1      1   \n",
-       "1      2            5  2015-07-31   6064        625     1      1   \n",
-       "2      3            5  2015-07-31   8314        821     1      1   \n",
-       "3      4            5  2015-07-31  13995       1498     1      1   \n",
-       "4      5            5  2015-07-31   4822        559     1      1   \n",
-       "\n",
-       "  state_holiday  school_holiday  \n",
-       "0             0               1  \n",
-       "1             0               1  \n",
-       "2             0               1  \n",
-       "3             0               1  \n",
-       "4             0               1  "
+       "   Store State\n",
+       "0      1    HE\n",
+       "1      2    TH\n",
+       "2      3    NW\n",
+       "3      4    BE\n",
+       "4      5    SN"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.head()"
+    "store_states_raw.head()"
    ]
   },
   {
