--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -108,56 +108,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>State</th>\n",
+       "      <th>file</th>\n",
+       "      <th>week</th>\n",
+       "      <th>trend</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>HE</td>\n",
+       "      <td>Rossmann_DE_SN</td>\n",
+       "      <td>2012-12-02 - 2012-12-08</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>TH</td>\n",
+       "      <td>Rossmann_DE_SN</td>\n",
+       "      <td>2012-12-09 - 2012-12-15</td>\n",
+       "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NW</td>\n",
+       "      <td>Rossmann_DE_SN</td>\n",
+       "      <td>2012-12-16 - 2012-12-22</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>BE</td>\n",
+       "      <td>Rossmann_DE_SN</td>\n",
+       "      <td>2012-12-23 - 2012-12-29</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>SN</td>\n",
+       "      <td>Rossmann_DE_SN</td>\n",
+       "      <td>2012-12-30 - 2013-01-05</td>\n",
+       "      <td>67</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Store State\n",
-       "0      1    HE\n",
-       "1      2    TH\n",
-       "2      3    NW\n",
-       "3      4    BE\n",
-       "4      5    SN"
+       "             file                     week  trend\n",
+       "0  Rossmann_DE_SN  2012-12-02 - 2012-12-08     96\n",
+       "1  Rossmann_DE_SN  2012-12-09 - 2012-12-15     95\n",
+       "2  Rossmann_DE_SN  2012-12-16 - 2012-12-22     91\n",
+       "3  Rossmann_DE_SN  2012-12-23 - 2012-12-29     48\n",
+       "4  Rossmann_DE_SN  2012-12-30 - 2013-01-05     67"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "store_states_raw.head()"
+    "google_raw.head()"
    ]
   },
   {
