Starting for the day

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,86 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file</th>\n",
-       "      <th>week</th>\n",
-       "      <th>trend</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Rossmann_DE_SN</td>\n",
-       "      <td>2012-12-02 - 2012-12-08</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Rossmann_DE_SN</td>\n",
-       "      <td>2012-12-09 - 2012-12-15</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Rossmann_DE_SN</td>\n",
-       "      <td>2012-12-16 - 2012-12-22</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Rossmann_DE_SN</td>\n",
-       "      <td>2012-12-23 - 2012-12-29</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rossmann_DE_SN</td>\n",
-       "      <td>2012-12-30 - 2013-01-05</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             file                     week  trend\n",
-       "0  Rossmann_DE_SN  2012-12-02 - 2012-12-08     96\n",
-       "1  Rossmann_DE_SN  2012-12-09 - 2012-12-15     95\n",
-       "2  Rossmann_DE_SN  2012-12-16 - 2012-12-22     91\n",
-       "3  Rossmann_DE_SN  2012-12-23 - 2012-12-29     48\n",
-       "4  Rossmann_DE_SN  2012-12-30 - 2013-01-05     67"
+       "2072"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "google_raw.head()"
+    "# google_raw.file.nunique() # 14\n",
+    "# google_raw.week.nunique() # 148\n",
+    "# len(google_raw) # 2072\n",
+    "# 148 * 14 # 2072"
    ]
   },
   {
