Added merge of state_names and store_states. Unit/property tests pass.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2072"
+       "Index(['StateName', 'State'], dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,11 @@
     "# google_raw.file.nunique() # 14\n",
     "# google_raw.week.nunique() # 148\n",
     "# len(google_raw) # 2072\n",
-    "# 148 * 14 # 2072"
+    "# 148 * 14 # 2072\n",
+    "store_states.columns # 'store', 'state'\n",
+    "state_names.columns # 'state_name', 'state'\n",
+    "state_names_raw.columns # 'state_name', 'state'\n",
+    "# sorted(state_names.columns) == ['state', 'state_name'] "
    ]
   },
   {
