Some updates, tests broken.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -247,6 +247,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>week</th>\n",
+       "      <th>trend</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-01 - 2013-01-07</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-15 - 2013-01-21</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    file                     week  trend\n",
+       "0  DE_BB  2013-01-01 - 2013-01-07     98\n",
+       "1  DE_BE  2013-01-15 - 2013-01-21     69"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake = pd.DataFrame({'file': ['DE_BB', 'DE_BE', np.nan], 'week': ['2013-01-01 - 2013-01-07', '2013-01-15 - 2013-01-21', 'dropped'], 'trend': [98, 69, 12]})  \n",
+    "fake.dropna(axis='index', inplace=True) \n",
+    "fake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['0 days', '2 days', '4 days', '6 days', '8 days', '10 days'], dtype='timedelta64[ns]', freq='2D')"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake = pd.DataFrame({'file': ['DE_BB', 'DE_BE'], 'week': ['2013-01-06 - 2013-01-12', '2013-01-20 - 2013-01-26'], 'trend': [98, 69]})  \n",
+    "#fake['state'] = fake.file.str[-2:]\n",
+    "#fake.loc[fake.state == 'NI', 'state'] = 'HB,NI'\n",
+    "#fake['week_start'] = pd.to_datetime(fake.week.str[:10])\n",
+    "start_date = pd.to_datetime(fake.week.min()[:10])\n",
+    "end_date = pd.to_datetime(fake.week.max()[-10:])\n",
+    "days = np.arange(start_date, end_date + pd.to_timedelta('1D'), pd.to_timedelta('1D'))\n",
+    "#weeks = np.arange(start_date, end_date + pd.to_timedelta('1D'), pd.to_timedelta('7D'))\n",
+    "#all_weeks = pd.Series(sorted(np.hstack([weeks for i in range(0,7)]))) # 1036\n",
+    "#week_lookup = pd.DataFrame({'date': days, 'Week_Start': all_weeks})\n",
+    "#fake = week_lookup.merge(fake, left_on='Week_Start', right_on='week_start')\n",
+    "#fake = fake.drop(['file', 'Week_Start', 'week'], axis='columns') #len=14504\n",
+    "#fake\n",
+    "#fake.Week_Start.dtype # dtype('<M8[ns]')\n",
+    "#fake.week_start.dtype # dtype('<M8[ns]')\n",
+    "a = pd.DataFrame({'day': days})\n",
+    "# a['week'] = a['day'] - pd.offsets.Week(-1)\n",
+    "#a['week'] = a['day'] - pd.offsets.Week(weekday=6)\n",
+    "#a['week'] = a['day'] - pd.offsets.DateOffset(weekday=6)\n",
+    "offsets = pd.Series(pd.to_timedelta([f'{i}D' for i in range(6)]))\n",
+    "(pd.to_timedelta([f'{i}D' for i in range(6)])) + (pd.to_timedelta([f'{i}D' for i in range(6)]))\n",
+    "#a['week'] = a['day'] - offsets\n",
+    "#a\n",
+    "#pd.to_timedelta('1D')\n",
+    "# [f'{i}D' for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
