Just committing, things broken.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +196,8 @@
     "df = df.merge(weather, left_on='state_name', right_on='file').drop('file', axis='columns')\n",
     "df = df.merge(stores, on='store')\n",
     "train['date'] = pd.to_datetime(train['date'])\n",
-    "df = df.merge(train, on=['date', 'store'], how='outer')\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
+    "df = df.merge(train, on=['date', 'store'], how='outer')\n",
     "df = df.merge(google, on=['date', 'state'])\n",
     "df.loc[df.open.isnull(), 'open'] = 0\n",
     "df.loc[df.sales.isnull(), 'sales'] = 0\n",
@@ -312,28 +312,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>week</th>\n",
+       "      <th>trend</th>\n",
+       "      <th>state</th>\n",
+       "      <th>week_start</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Week_Start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-07</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-08</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-09</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-10</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-11</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DE_BB</td>\n",
+       "      <td>2013-01-06 - 2013-01-12</td>\n",
+       "      <td>98</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2013-01-12</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-21</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-22</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-23</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-24</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-25</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>DE_BE</td>\n",
+       "      <td>2013-01-20 - 2013-01-26</td>\n",
+       "      <td>69</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "      <td>2013-01-26</td>\n",
+       "      <td>2013-01-20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "TimedeltaIndex(['0 days', '2 days', '4 days', '6 days', '8 days', '10 days'], dtype='timedelta64[ns]', freq='2D')"
+       "     file                     week  trend state week_start       date  \\\n",
+       "0   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-06   \n",
+       "1   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-07   \n",
+       "2   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-08   \n",
+       "3   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-09   \n",
+       "4   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-10   \n",
+       "5   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-11   \n",
+       "6   DE_BB  2013-01-06 - 2013-01-12     98    BB 2013-01-06 2013-01-12   \n",
+       "7   DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-20   \n",
+       "8   DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-21   \n",
+       "9   DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-22   \n",
+       "10  DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-23   \n",
+       "11  DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-24   \n",
+       "12  DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-25   \n",
+       "13  DE_BE  2013-01-20 - 2013-01-26     69    BE 2013-01-20 2013-01-26   \n",
+       "\n",
+       "   Week_Start  \n",
+       "0  2013-01-06  \n",
+       "1  2013-01-06  \n",
+       "2  2013-01-06  \n",
+       "3  2013-01-06  \n",
+       "4  2013-01-06  \n",
+       "5  2013-01-06  \n",
+       "6  2013-01-06  \n",
+       "7  2013-01-20  \n",
+       "8  2013-01-20  \n",
+       "9  2013-01-20  \n",
+       "10 2013-01-20  \n",
+       "11 2013-01-20  \n",
+       "12 2013-01-20  \n",
+       "13 2013-01-20  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fake = pd.DataFrame({'file': ['DE_BB', 'DE_BE'], 'week': ['2013-01-06 - 2013-01-12', '2013-01-20 - 2013-01-26'], 'trend': [98, 69]})  \n",
-    "#fake['state'] = fake.file.str[-2:]\n",
-    "#fake.loc[fake.state == 'NI', 'state'] = 'HB,NI'\n",
-    "#fake['week_start'] = pd.to_datetime(fake.week.str[:10])\n",
+    "fake['state'] = fake.file.str[-2:]\n",
+    "fake.loc[fake.state == 'NI', 'state'] = 'HB,NI'\n",
+    "fake['week_start'] = pd.to_datetime(fake.week.str[:10])\n",
     "start_date = pd.to_datetime(fake.week.min()[:10])\n",
     "end_date = pd.to_datetime(fake.week.max()[-10:])\n",
-    "days = np.arange(start_date, end_date + pd.to_timedelta('1D'), pd.to_timedelta('1D'))\n",
+    "#days = np.arange(start_date, end_date + pd.to_timedelta('1D'), pd.to_timedelta('1D'))\n",
+    "days = pd.date_range(start_date, end_date, freq='D')\n",
     "#weeks = np.arange(start_date, end_date + pd.to_timedelta('1D'), pd.to_timedelta('7D'))\n",
     "#all_weeks = pd.Series(sorted(np.hstack([weeks for i in range(0,7)]))) # 1036\n",
     "#week_lookup = pd.DataFrame({'date': days, 'Week_Start': all_weeks})\n",
@@ -342,21 +546,35 @@
     "#fake\n",
     "#fake.Week_Start.dtype # dtype('<M8[ns]')\n",
     "#fake.week_start.dtype # dtype('<M8[ns]')\n",
-    "a = pd.DataFrame({'day': days})\n",
+    "a = pd.DataFrame({'date': days})\n",
+    "a['num'] = a['date'].dt.dayofweek\n",
+    "a['off2'] = (a['num'] + 1) % 7\n",
+    "a['Week_Start'] = a['date'] - pd.to_timedelta(a['off2'], unit='D')\n",
+    "a.drop(['num', 'off2'], axis='columns', inplace=True)\n",
+    "#a['week'] = a.loc[a.num != 6, a.day + pd.to_timedelta(f'{(a.num + 1) % 6}D')]\n",
+    "fake.merge(a, left_on='week_start', right_on='Week_Start')\n",
     "# a['week'] = a['day'] - pd.offsets.Week(-1)\n",
     "#a['week'] = a['day'] - pd.offsets.Week(weekday=6)\n",
     "#a['week'] = a['day'] - pd.offsets.DateOffset(weekday=6)\n",
-    "offsets = pd.Series(pd.to_timedelta([f'{i}D' for i in range(6)]))\n",
-    "(pd.to_timedelta([f'{i}D' for i in range(6)])) + (pd.to_timedelta([f'{i}D' for i in range(6)]))\n",
+    "#week_of_offsets = pd.to_timedelta([f'{i}D' for i in range(7)]).T\n",
+    "#num_of_weeks = len(a) // 7\n",
+    "#offsets = pd.Series(week_of_offsets for week in range(num_of_weeks))\n",
+    "#offsets.reshape(1, -1)\n",
+    "#start_string = str(start_date)[:10]\n",
+    "#end_string = str(end_date)[:10]\n",
+    "#range = pd.timedelta_range(start=start_string, end=end_string, freq='D')\n",
+    "#range\n",
+    "#pd.TimedeltaIndex.to_series(range)\n",
     "#a['week'] = a['day'] - offsets\n",
     "#a\n",
+    "#(pd.to_timedelta([f'{i}D' for i in range(6)])) + (pd.to_timedelta([f'{i}D' for i in range(6)]))\n",
     "#pd.to_timedelta('1D')\n",
     "# [f'{i}D' for i in range(10)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -364,60 +582,75 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1050330 entries, 0 to 1050329\n",
+      "Int64Index: 1103850 entries, 0 to 1103849\n",
       "Data columns (total 44 columns):\n",
-      "store                           1050330 non-null int64\n",
-      "state                           1050330 non-null object\n",
-      "state_name                      1050330 non-null object\n",
-      "date                            1050330 non-null datetime64[ns]\n",
-      "max_temperature_c               1050330 non-null int64\n",
-      "mean_temperature_c              1050330 non-null int64\n",
-      "min_temperature_c               1050330 non-null int64\n",
-      "dew_point_c                     1050330 non-null int64\n",
-      "mean_dew_point_c                1050330 non-null int64\n",
-      "min_dewpoint_c                  1050330 non-null int64\n",
-      "max_humidity                    1050330 non-null int64\n",
-      "mean_humidity                   1050330 non-null int64\n",
-      "min_humidity                    1050330 non-null int64\n",
-      "max_sea_level_pressureh_pa      1050330 non-null int64\n",
-      "mean_sea_level_pressureh_pa     1050330 non-null int64\n",
-      "min_sea_level_pressureh_pa      1050330 non-null int64\n",
-      "max_visibility_km               1050330 non-null float64\n",
-      "mean_visibility_km              1050330 non-null float64\n",
-      "min_visibility_km               1050330 non-null float64\n",
-      "max_wind_speed_km_h             1050330 non-null int64\n",
-      "mean_wind_speed_km_h            1050330 non-null int64\n",
-      "max_gust_speed_km_h             1050330 non-null float64\n",
-      "precipitationmm                 1050330 non-null float64\n",
-      "cloud_cover                     1050330 non-null float64\n",
-      "events                          1050330 non-null object\n",
-      "wind_dir_degrees                1050330 non-null int64\n",
-      "trend                           1050330 non-null int64\n",
-      "week_start                      1050330 non-null datetime64[ns]\n",
-      "store_type                      1050330 non-null object\n",
-      "assortment                      1050330 non-null object\n",
-      "competition_distance            1050330 non-null float64\n",
-      "competition_open_since_month    1050330 non-null float64\n",
-      "competition_open_since_year     1050330 non-null float64\n",
-      "promo2                          1050330 non-null int64\n",
-      "promo2_since_week               1050330 non-null float64\n",
-      "promo2_since_year               1050330 non-null float64\n",
-      "promo_interval                  1050330 non-null object\n",
-      "day_of_week                     1050330 non-null int64\n",
-      "sales                           1050330 non-null float64\n",
-      "customers                       1050330 non-null float64\n",
-      "open                            1050330 non-null float64\n",
-      "promo                           1050330 non-null float64\n",
-      "state_holiday                   1050330 non-null object\n",
-      "school_holiday                  1050330 non-null float64\n",
+      "store                           1103850 non-null int64\n",
+      "state                           1103850 non-null object\n",
+      "state_name                      1103850 non-null object\n",
+      "date                            1103850 non-null datetime64[ns]\n",
+      "max_temperature_c               1103850 non-null int64\n",
+      "mean_temperature_c              1103850 non-null int64\n",
+      "min_temperature_c               1103850 non-null int64\n",
+      "dew_point_c                     1103850 non-null int64\n",
+      "mean_dew_point_c                1103850 non-null int64\n",
+      "min_dewpoint_c                  1103850 non-null int64\n",
+      "max_humidity                    1103850 non-null int64\n",
+      "mean_humidity                   1103850 non-null int64\n",
+      "min_humidity                    1103850 non-null int64\n",
+      "max_sea_level_pressureh_pa      1103850 non-null int64\n",
+      "mean_sea_level_pressureh_pa     1103850 non-null int64\n",
+      "min_sea_level_pressureh_pa      1103850 non-null int64\n",
+      "max_visibility_km               1103850 non-null float64\n",
+      "mean_visibility_km              1103850 non-null float64\n",
+      "min_visibility_km               1103850 non-null float64\n",
+      "max_wind_speed_km_h             1103850 non-null int64\n",
+      "mean_wind_speed_km_h            1103850 non-null int64\n",
+      "max_gust_speed_km_h             1103850 non-null float64\n",
+      "precipitationmm                 1103850 non-null float64\n",
+      "cloud_cover                     1103850 non-null float64\n",
+      "events                          1103850 non-null object\n",
+      "wind_dir_degrees                1103850 non-null int64\n",
+      "store_type                      1103850 non-null object\n",
+      "assortment                      1103850 non-null object\n",
+      "competition_distance            1103850 non-null float64\n",
+      "competition_open_since_month    1103850 non-null float64\n",
+      "competition_open_since_year     1103850 non-null float64\n",
+      "promo2                          1103850 non-null int64\n",
+      "promo2_since_week               1103850 non-null float64\n",
+      "promo2_since_year               1103850 non-null float64\n",
+      "promo_interval                  1103850 non-null object\n",
+      "day_of_week                     1103850 non-null int64\n",
+      "sales                           1103850 non-null float64\n",
+      "customers                       1103850 non-null float64\n",
+      "open                            1103850 non-null float64\n",
+      "promo                           1103850 non-null float64\n",
+      "state_holiday                   1103850 non-null object\n",
+      "school_holiday                  1103850 non-null float64\n",
+      "trend                           1103850 non-null int64\n",
+      "week_start                      1103850 non-null datetime64[ns]\n",
       "dtypes: datetime64[ns](2), float64(16), int64(19), object(7)\n",
-      "memory usage: 360.6+ MB\n"
+      "memory usage: 379.0+ MB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1017209 entries, 0 to 1017208\n",
+      "Data columns (total 9 columns):\n",
+      "store             1017209 non-null int64\n",
+      "day_of_week       1017209 non-null int64\n",
+      "date              1017209 non-null datetime64[ns]\n",
+      "sales             1017209 non-null int64\n",
+      "customers         1017209 non-null int64\n",
+      "open              1017209 non-null int64\n",
+      "promo             1017209 non-null int64\n",
+      "state_holiday     1017209 non-null object\n",
+      "school_holiday    1017209 non-null int64\n",
+      "dtypes: datetime64[ns](1), int64(7), object(1)\n",
+      "memory usage: 69.8+ MB\n"
      ]
     }
    ],
    "source": [
     "df.isnull().any()\n",
     "df.info()\n",
+    "train.info()\n",
     "#len(df)    # 1050330\n",
     "#942 * 1115 # 1050330"
    ]
