--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../data/processed/wrangled_dataframe.csv')"
+    "df.to_csv('../../data/processed/wrangled_dataframe.csv', index=False)"
    ]
   },
   {
