--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -194,6 +194,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12236"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(weather_raw) #15840\n",
+    "len(google_raw) # 2072\n",
+    "google_raw.week.dtype # dtype('O')\n",
+    "google.date.dtype # dtype('<M8[ns]')\n",
+    "google_raw.file.dtype # dtype('O')\n",
+    "len(weather_raw[weather_raw.Max_Gust_SpeedKm_h.isnull()])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
    "outputs": [
