Refactoring tests. Unit tests pass.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12236"
+       "1115"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,12 @@
     "google_raw.week.dtype # dtype('O')\n",
     "google.date.dtype # dtype('<M8[ns]')\n",
     "google_raw.file.dtype # dtype('O')\n",
-    "len(weather_raw[weather_raw.Max_Gust_SpeedKm_h.isnull()])"
+    "len(weather_raw[weather_raw.Max_Gust_SpeedKm_h.isnull()])\n",
+    "#tester = train.loc[train['state_holiday'] == '0', 'state_holiday'].apply('float')\n",
+    "#len(tester)\n",
+    "store_states_raw.isnull().any().any()\n",
+    "store_states_raw.Store.nunique()\n",
+    "len(store_states_raw)"
    ]
   },
   {
