In the middle of major surgery. Tests that matter pass.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -194,16 +194,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>trend</th>\n",
+       "      <th>state</th>\n",
+       "      <th>week_start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>67</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>2012-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>61</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>2012-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>60</td>\n",
+       "      <td>BY</td>\n",
+       "      <td>2012-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>423</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>53</td>\n",
+       "      <td>TH</td>\n",
+       "      <td>2012-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>2012-12-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1115"
+       "          date  trend state week_start\n",
+       "420 2013-01-01     67    SN 2012-12-30\n",
+       "421 2013-01-01     61    DE 2012-12-30\n",
+       "422 2013-01-01     60    BY 2012-12-30\n",
+       "423 2013-01-01     53    TH 2012-12-30\n",
+       "424 2013-01-01     53    NW 2012-12-30"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +289,14 @@
     "#len(tester)\n",
     "store_states_raw.isnull().any().any()\n",
     "store_states_raw.Store.nunique()\n",
-    "len(store_states_raw)"
+    "len(store_states_raw)\n",
+    "weather_raw[weather_raw.Max_VisibilityKm.isnull()].head()\n",
+    "# weather_raw.Max_VisibilityKm.dtype\n",
+    "len(weather_raw.columns) # 24\n",
+    "weather_raw.CloudCover.dtype\n",
+    "len(google)\n",
+    "13188/942\n",
+    "google.head()"
    ]
   },
   {
