Updated tests/test_make_dataset_with_constraints.py for data wrangling. Unit tests all pass!  Took 194 seconds.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -180,7 +180,9 @@
     "df.loc[df.school_holiday.isnull(), 'school_holiday'] = 0\n",
     "df.loc[df.state_holiday.isnull(), 'state_holiday'] = '0'\n",
     "df['day_of_week'] = df.date.dt.dayofweek\n",
-    "df.loc[df.customers == 0, 'open'] = 0"
+    "df.loc[df.customers == 0, 'open'] = 0\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['week_start'] = pd.to_datetime(df['week_start'])"
    ]
   },
   {
@@ -194,86 +196,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>trend</th>\n",
-       "      <th>state</th>\n",
-       "      <th>week_start</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>420</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>67</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>2012-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>61</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>2012-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>60</td>\n",
-       "      <td>BY</td>\n",
-       "      <td>2012-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>53</td>\n",
-       "      <td>TH</td>\n",
-       "      <td>2012-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>53</td>\n",
-       "      <td>NW</td>\n",
-       "      <td>2012-12-30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          date  trend state week_start\n",
-       "420 2013-01-01     67    SN 2012-12-30\n",
-       "421 2013-01-01     61    DE 2012-12-30\n",
-       "422 2013-01-01     60    BY 2012-12-30\n",
-       "423 2013-01-01     53    TH 2012-12-30\n",
-       "424 2013-01-01     53    NW 2012-12-30"
+       "0         2013-01-01\n",
+       "1         2013-01-01\n",
+       "2         2013-01-01\n",
+       "3         2013-01-01\n",
+       "4         2013-01-01\n",
+       "5         2013-01-01\n",
+       "6         2013-01-01\n",
+       "7         2013-01-01\n",
+       "8         2013-01-01\n",
+       "9         2013-01-01\n",
+       "10        2013-01-01\n",
+       "11        2013-01-01\n",
+       "12        2013-01-01\n",
+       "13        2013-01-01\n",
+       "14        2013-01-01\n",
+       "15        2013-01-01\n",
+       "16        2013-01-01\n",
+       "17        2013-01-01\n",
+       "18        2013-01-01\n",
+       "19        2013-01-01\n",
+       "20        2013-01-01\n",
+       "21        2013-01-01\n",
+       "22        2013-01-01\n",
+       "23        2013-01-01\n",
+       "24        2013-01-01\n",
+       "25        2013-01-01\n",
+       "26        2013-01-01\n",
+       "27        2013-01-01\n",
+       "28        2013-01-01\n",
+       "29        2013-01-01\n",
+       "             ...    \n",
+       "1050300   2015-07-30\n",
+       "1050301   2015-07-30\n",
+       "1050302   2015-07-31\n",
+       "1050303   2015-07-31\n",
+       "1050304   2015-07-31\n",
+       "1050305   2015-07-31\n",
+       "1050306   2015-07-31\n",
+       "1050307   2015-07-31\n",
+       "1050308   2015-07-31\n",
+       "1050309   2015-07-31\n",
+       "1050310   2015-07-31\n",
+       "1050311   2015-07-31\n",
+       "1050312   2015-07-31\n",
+       "1050313   2015-07-31\n",
+       "1050314   2015-07-31\n",
+       "1050315   2015-07-31\n",
+       "1050316   2015-07-31\n",
+       "1050317   2015-07-31\n",
+       "1050318   2015-07-31\n",
+       "1050319   2015-07-31\n",
+       "1050320   2015-07-31\n",
+       "1050321   2015-07-31\n",
+       "1050322   2015-07-31\n",
+       "1050323   2015-07-31\n",
+       "1050324   2015-07-31\n",
+       "1050325   2015-07-31\n",
+       "1050326   2015-07-31\n",
+       "1050327   2015-07-31\n",
+       "1050328   2015-07-31\n",
+       "1050329   2015-07-31\n",
+       "Name: date, Length: 1050330, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +289,16 @@
     "weather_raw.CloudCover.dtype\n",
     "len(google)\n",
     "13188/942\n",
-    "google.head()"
+    "google.head()\n",
+    "1115*942 # 1050330\n",
+    "(1050330-1017209)/33121\n",
+    "df.week_start.dtype\n",
+    "df.date.head()\n",
+    "df.date[0] + pd.Timedelta('8 days')\n",
+    "example = df.date[:5].copy()\n",
+    "example\n",
+    "#pd.to_datetime(example)\n",
+    "df.date"
    ]
   },
   {
