Added a couple of key assertions to tests/test_make_dataset_with_constraints.py. Unit tests pass.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -196,6 +196,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (df.groupby(['store', 'date']).size() == 1).all() # True\n",
+    "(df.groupby(['store', 'state']).size() == 942).all() # True\n",
+    "# (df.groupby(['store', 'state']).size() != 1).any() # True\n",
+    "#(store_states_raw.groupby(['Store', 'State']).size() == 1).all() # True\n",
+    "#(stores_raw.groupby(['Store']).size() == 1).all() # True\n",
+    "#(google_raw.groupby(['file', 'week']).size() == 1).all() # True\n",
+    "#(train_raw.groupby(['Store', 'Date']).size() == 1).all() # True\n",
+    "#(weather_raw.groupby(['Date', 'file']).size() == 1).all() # True\n",
+    "# df.groupby(['store', 'state']).size().min()\n",
+    "\n",
+    "# (df.groupby(['store', 'date']).size() == 1).all() # True\n",
+    "df.groupby(['state', 'date']).size().mean() # BE: 92, TH: 36\n",
+    "(df.groupby(['state']).size() / store_states.groupby('state').size() == 942).all() # True\n",
+    "(df.groupby(['store']).size() / store_states.groupby('store').size() == 942).all() # True\n",
+    "# store_states.groupby('state').size() # BE: 92, TH: 36"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
